# TriOrb-ROS2-Types

./: .gitignore  README.md  README_types.md  generate_api_md.py
ken_interface/: CMakeLists.txt  package.xml
ken_interface/msg/: EcuStatus.msg  JackStatus.msg  Ke26Vehicle.msg
oriental_interface/: CMakeLists.txt  package.xml
oriental_interface/msg/: Gains.msg
triorb_collaboration_interface/: CMakeLists.txt  README.md  package.xml
triorb_collaboration_interface/msg/: GroupCreate.msg  ParentBind.msg
triorb_cv_interface/: CMakeLists.txt  README.md  package.xml
triorb_cv_interface/msg/: AprilTag.msg  AprilTagsInCam.msg  BoundingBox.msg  Detection.msg
triorb_cv_interface/srv/: GetImage.srv  Version.srv
triorb_drive_interface/: CMakeLists.txt  README.md  package.xml
triorb_drive_interface/action/: TriorbSetPath.action
triorb_drive_interface/msg/: DriveGains.msg  MotorParams.msg  MotorStatus.msg  PathSetting.msg  Route.msg  (+16 more)
triorb_field_interface/: CMakeLists.txt  README.md  package.xml
triorb_plc_interface/: CMakeLists.txt  package.xml
triorb_project_interface/: CMakeLists.txt  README.md  package.xml
triorb_sensor_interface/: CMakeLists.txt  README.md  package.xml
triorb_slam_interface/: CMakeLists.txt  package.xml
triorb_slam_interface/msg/: CamerasLandmarkInfo.msg  CamerasPose.msg  Keyframe.msg  KeyframeArray.msg  PointArrayStamped.msg  PoseDevStamped.msg  SlamStatus.msg  UInt32MultiArrayStamped.msg  XyArrayStamped.msg
triorb_static_interface/: CMakeLists.txt  README.md  package.xml
triorb_thirdparty_interface/: CMakeLists.txt  package.xml
(+54 files in other folders)
